--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ panel.style.padding="0 16px";
   const blob = new Blob([htmlContent], { type: "text/html" });
   const a = document.createElement("a");
   a.href = URL.createObjectURL(blob);
-  a.download = "accordion.html";
+  a.download = "index.html";
   a.click();
 };
 
@@ -483,3 +483,4 @@ renderPreview();
 
 </body>
 </html>
+
